# agentgraf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
examples/: send_test_spans.py
grafana-plugin/: package-lock.json  package.json  tsconfig.json  webpack.config.js
grafana-plugin/src/: module.ts  plugin.json  types.ts
grafana-plugin/src/components/: RunsPanel.tsx  TraceTreePanel.tsx  buildSpanTree.ts  parseLokiFrames.ts
tracer/: README.md  pyproject.toml
tracer/src/agentgraf/: __init__.py  client.py  models.py  processor.py  tracer.py
tracer/tests/: conftest.py  test_client.py  test_models.py  test_processor.py  test_tracer.py
