[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgraf"
version = "1.0.0"
description = "Zero-infrastructure AI agent tracing for Grafana + Loki"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Mohamed Amine Berguiga", email = "m.a.berguiga@gmail.com" }
]
keywords = ["tracing", "llm", "langchain", "grafana", "loki", "observability", "ai-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/Berg-it/agentgraf"
Documentation = "https://github.com/Berg-it/agentgraf#readme"
Repository = "https://github.com/Berg-it/agentgraf"
Issues = "https://github.com/Berg-it/agentgraf/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgraf"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tracer/tests"]
